--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TimeLockr</title>
+    <title>Material UI & Styled Components</title>
   </head>
   <body>
-    <div id="app">not rendered</div>
+    <div id="app"></div>
   </body>
 </html>
